ros2_ws/log/build_2020-10-17_01-07-20/py_pubsub/stderr.log
  File "/home/shorouk/ros2_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/subscriber_member_function.py", line 59
    else
        ^
SyntaxError: invalid syntax

